feat(gpu): Implement production SpGEMM with AVOS semiring
Implement complete two-phase sparse matrix multiplication (SpGEMM) for
GPU with proper AVOS semiring operations. This is the production
foundation for billion-scale graph computations on DGX Spark.

## New Modules

### Core Data Structures
- **csr_gpu.py** (327 lines): Production CSR matrix with raw int32 buffers
  - Automatic triangular detection and validation
  - CPU ↔ GPU transfer with unified memory support
  - Structure validation (indptr, indices bounds)
  - Memory usage tracking

### AVOS Operations
- **avos_kernels.py** (287 lines): CUDA RawKernel implementations
  - Correct AVOS sum (non-zero minimum)
  - Correct AVOS product with parity constraints and bit-shift composition
  - Identity semantics (RED_ONE/-1, BLACK_ONE/1)
  - Validated against CPU reference (169 test combinations)

### SpGEMM Algorithm
- **spgemm_symbolic.py** (282 lines): Pattern computation phase
  - Merge-based symbolic phase for deterministic output
  - Upper triangular masking (j >= i)
  - Prefix sum (exclusive scan) for CSR construction

- **spgemm_numeric.py** (267 lines): Value computation phase
  - AVOS sum/product operations in CUDA
  - Deterministic ordered accumulation
  - Triangular mask application

- **spgemm.py** (221 lines): High-level API
  - spgemm_upper_triangular(): Main entry point
  - matmul_gpu(): Simple matrix multiplication API
  - spgemm_with_stats(): Performance monitoring
  - Input validation and error handling

## Test Coverage

- **test_csr_gpu.py** (236 lines, 14 tests): CSR matrix validation
- **test_avos_kernels.py** (247 lines, 14 tests): AVOS operations
- **test_spgemm_symbolic.py** (265 lines, 12 tests): Pattern computation
- **test_spgemm.py** (320 lines, 15 tests): End-to-end SpGEMM

Total: 62 tests, 100% passing

## Key Features

1. **Proper Integer Operations**: Direct int32 operations, no float32 wrapper
2. **AVOS Correctness**: Full semiring semantics with parity constraints
3. **Triangula

--- a/redblackgraph/gpu/meson.build
+++ b/redblackgraph/gpu/meson.build
@@ -4,6 +4,11 @@ python_sources = [
   '__init__.py',
   'core.py',
   'matrix.py',
+  'csr_gpu.py',
+  'avos_kernels.py',
+  'spgemm_symbolic.py',
+  'spgemm_numeric.py',
+  'spgemm.py',
   'README.md',
 ]
 
