chore: switch fs-crawler to local development version
- Changed fs-crawler dependency from PyPI version to local file path for active development
- Added rbg-graph-builder CLI entry point for standalone graph building
- Implemented lazy import for RbgGraphBuilder to avoid circular import issues when running as __main__

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
 [project.optional-dependencies]
 # File I/O utilities (CSV/Excel graph readers/writers)
 io = [
-    "fs-crawler>=0.3.2",
+    "fs-crawler @ file:///home/rappdw/dev/fs-crawler",
     "XlsxWriter",
 ]
 dev = [
@@ -61,7 +61,7 @@ test = [
     "pytest>=3.0",
     "pytest-cov>=2.4",
     "pylint>=1.8.1",
-    "fs-crawler>=0.3.2",  # Tests use RelationshipFileReader
+    "fs-crawler @ file:///home/rappdw/dev/fs-crawler",  # Tests use RelationshipFileReader
     "XlsxWriter",  # Tests use RedBlackGraphWriter
 ]
 
@@ -72,6 +72,7 @@ Download = "https://github.com/rappdw/redblackgraph"
 
 [project.scripts]
 rbg = "redblackgraph.__main__:main"
+rbg-graph-builder = "redblackgraph.util.graph_builder:main"
 
 [tool.meson-python.args]
 # Pass additional arguments to meson if needed
