feat: complete Phase 0 sparse infrastructure with CSR utilities, format conversion, and component extraction
- Implemented CSR/CSC iteration primitives in _csr_utils.pxi for O(nnz) edge traversal
- Added sparse matrix format utilities (_sparse_format.py) with ensure_csr/csc, density monitoring
- Created DensityMonitor class (_density.py) to detect and prevent accidental densification
- Implemented sparse permutation (permute_sparse) preserving CSR format without densification
- Added component extraction/

--- a/redblackgraph/sparse/csgraph/meson.build
+++ b/redblackgraph/sparse/csgraph/meson.build
@@ -6,6 +6,8 @@ python_sources = [
   '_validation.py',
   'cycleerror.py',
   'transitive_closure.py',
+  '_sparse_format.py',
+  '_density.py',
 ]
 
 py.install_sources(
