feat(sparse): implement sparse topological sort with O(V+E) DFS algorithm
- Added _topological_sort.pyx with iterative DFS-based topological sort
- Implemented topological_sort() returning permutation array for CSR/rb_array inputs
- Added topological_ordering() wrapper returning Ordering object with sparse permutation
- Implemented is_upper_triangular() helper to verify triangular property
- Added 25 passing tests in test_topological_sort.py covering:
  - Output comparison with reference implementation
  - Sparse

--- a/redblackgraph/sparse/csgraph/meson.build
+++ b/redblackgraph/sparse/csgraph/meson.build
@@ -24,6 +24,7 @@ cython_extensions = [
   '_ordering',
   '_relational_composition',
   '_tools',
+  '_topological_sort',
 ]
 
 foreach ext_name : cython_extensions
