docs: update sparse implementation checklist and add DeepWiki badge
- Marked Phase 5 (AVOS matmul) as N/A - existing C++ implementation in rbm_math.h already provides optimized sparse matmul
- Marked Phase 6 (adaptive closure) as COMPLETE with all tests passing
- Added DeepWiki badge to README.md
- Fixed fs-crawler dependency path from absolute to relative submodule path
- Exported transitive_closure_squaring and transitive_closure_adaptive from csgraph.__init__.py
- Implemented transitive_closure_squaring()

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
 [project.optional-dependencies]
 # File I/O utilities (CSV/Excel graph readers/writers)
 io = [
-    "fs-crawler @ file:///home/rappdw/dev/fs-crawler",
+    "fs-crawler @ file:fs-crawler",
     "XlsxWriter",
 ]
 dev = [
@@ -61,7 +61,7 @@ test = [
     "pytest>=3.0",
     "pytest-cov>=2.4",
     "pylint>=1.8.1",
-    "fs-crawler @ file:///home/rappdw/dev/fs-crawler",  # Tests use RelationshipFileReader
+    "fs-crawler @ file:fs-crawler",  # Tests use RelationshipFileReader
     "XlsxWriter",  # Tests use RedBlackGraphWriter
 ]
 
