feat(gpu): add GPU extras and NVRTC preloading for CUDA runtime wheels
- Add [gpu] extras group to pyproject.toml with cupy-cuda12x and NVIDIA runtime dependencies
- Add --gpu flag to bin/setup-uv.sh to optionally install GPU dependencies
- Implement _try_preload_nvrtc() to ctypes.CDLL preload NVIDIA runtime wheels from site-packages
- Add NVRTC preloading to gpu/__init__.py, gpu/core.py, and gpu/avos_kernels.py
- Mark CUPY_AVAILABLE=False if NVRTC cannot be loaded to allow clean test skipping
- Fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,12 @@ io = [
     "fs-crawler",
     "XlsxWriter",
 ]
+gpu = [
+    "cupy-cuda12x",
+    "nvidia-cuda-nvrtc-cu12",
+    "nvidia-cublas-cu12",
+    "nvidia-cusparse-cu12",
+]
 dev = [
     "wheel>=0.29",
 ]
